Some fixs for semicolon support for separate the fields in the CSV.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>Decimal Sign:
 
              <label><input class="settingsElement" type="radio" name="decimal" id='decimalDot'   value="dot" checked/> Dot</label>
-             <label><input class="settingsElement" type="radio" name="decimal" id='decimalComma'  value="comma" /> Comma</label>
+             <label><input class="settingsElement" type="radio" name="decimal" id='decimalComma'  value="comma" /> Comma</label><label><input class="settingsElement" type="radio" name="delimiter" id='delimiterSemicolon'  value="semicolon" /> Semicolon</label>
             </p>
           <p><label><input class="settingsElement" type="checkbox" name="" value="" id="headersProvidedCB" checked /> First row is the header</label></p>
           <div class="settingsGroup">
